Add FileBrowser and Grappelli dashboard

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -14,7 +14,7 @@
   <div class="row top">
     <div class="col-lg-8 col-md-8 col-sm-7 col-left">
       <div class="name">
-        <a href="{% url 'pages:page' 'index' %}">
+        <a href="{% url 'pages:index' %}">
           {% trans 'Smaller Things from an Insignificant One' %}
         </a>
       </div>
