--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -17,7 +17,7 @@
 
     <!--activity descritpion-->
     <p class="work">{{ page.short_description }}</p>
-    {{ page.content|linebreaks }}
+    {{ page.content }}
 
   </div>
 </div>
