--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -7,7 +7,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>{{ title }}</title>
+<title>{% block title %}{{ title }}{% endblock %}</title>
 <link rel="icon" type="image/png" href="{% static 'base/img/favicon.png' %}">
 <meta name="viewport"
   content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
