--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -2,6 +2,8 @@
 
 {% load i18n static %}
 
+{% block title %}{{ page.title }}{% endblock %}
+
 {% block content_main %}
 
 <div class="row text-center">
