--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -32,6 +32,7 @@
 
 {% block body %}{% endblock %}
 
+<script src="{% static '3rdparty/underscore/js/underscore.js' %}"></script>
 <script src="{% static '3rdparty/jquery/js/jquery.js' %}"></script>
 <script src="{% static '3rdparty/fastclick/js/fastclick.js' %}"></script>
 <script src="{% static '3rdparty/smooth-scroll/js/jquery.smooth-scroll.min.js' %}"></script>
