--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block title %}{{ post.title }}{% endblock %}
+
 {% block content_main %}
 
 <h1>{{ post.title }}</h1>
@@ -13,7 +15,7 @@
 <!--article tags-->
 <p class="article-tags">
   {% for tag in post.tags.all %}
-  <a href="#">{{ tag.title }}</a>
+  <a href="#">{{ tag.name }}</a>
   {% if not forloop.last %} ,{% endif %}
   {% endfor %}
 </p>
