Basic blog post list AJAX

--- a/blog/templates/blog/includes/sidebar.html
+++ b/blog/templates/blog/includes/sidebar.html
@@ -1,3 +1,5 @@
 {% extends 'base/includes/sidebar.html' %}
 
-{% block sidebar_title %}{% endblock %}
+{% block sidebar_items %}
+<section class="blog"></section>
+{% endblock %}
