--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% load i18n %}
+{% load i18n static %}
 
 {% block title %}{{ post.title }}{% endblock %}
 
@@ -45,3 +45,18 @@
 {% endblock %}
 
 {% block sidebar_title %}{% trans 'Blog Posts' %}{% endblock %}
+
+{% block sidebar_content %}
+<script>
+var post_list_url = '{% url "api_dispatch_list" resource_name="blog/post" api_name="v1" %}';
+var current_post_id = '{{ post.id }}';
+</script>
+<script type="text/template" id="sidebar_article_template">
+{% include 'blog/includes/sidebar_article_template.html' %}
+</script>
+{% include 'blog/includes/sidebar.html' %}
+{% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'blog/js/sidebar.js' %}"></script>
+{% endblock %}
