Finish blog sidebar AJAX implementation

--- a/blog/templates/blog/includes/sidebar_post_tmpl.html
+++ b/blog/templates/blog/includes/sidebar_post_tmpl.html
@@ -1,4 +1,4 @@
-<div class="media">
+<div data-id="<%= post.id %>" class="media">
   <a class="pull-left" href="<%= post.url %>">
     <img class="media-object" alt="miniature-article"
       src="/static/base/img/blog/article-min-7.png">
@@ -6,7 +6,7 @@
   <div class="media-body">
     <h4 class="media-heading"><%= post.title %></h4>
     <p class="article-category"><%= post.category.title %></p>
-    <p class="article-date"><%= post.published_at %></p>
+    <p class="article-date"><%= post.published_at.split('T')[0] %></p>
     <p class="article-description"><%= post.short_description %></p>
   </div>
 </div>
