--- a/blog/templates/blog/includes/sidebar.html
+++ b/blog/templates/blog/includes/sidebar.html
@@ -1,5 +1,15 @@
 {% extends 'base/includes/sidebar.html' %}
 
+{% load i18n %}
+
 {% block sidebar_items %}
+<a href="#" class="btn btn-default btn-lg btn-block load-more"
+    data-action="after" data-method="prependTo" data-anchor="0">
+  {% trans 'Load more' %}
+</a>
 <section class="blog"></section>
+<a href="#" class="btn btn-default btn-lg btn-block load-more"
+    data-action="before" data-method="appendTo" data-anchor="0">
+  {% trans 'Load more' %}
+</a>
 {% endblock %}
