--- a/blog/templates/blog/includes/sidebar_post_tmpl.html
+++ b/blog/templates/blog/includes/sidebar_post_tmpl.html
@@ -1,13 +1,13 @@
-<div data-id="<%= post.id %>"
-    class="media mix <%= active %> <%= post.category.slug %> <%= tag_slugs.join(' ') %>">
-  <a class="pull-left" href="<%= post.url %>">
-    <img class="media-object" alt="miniature-article"
-      src="/static/base/img/blog/article-min-7.png">
-  </a>
-  <div class="media-body">
-    <h4 class="media-heading"><%= post.title %></h4>
-    <p class="article-category"><%= post.category.title %></p>
-    <p class="article-date"><%= post.published_at.split('T')[0] %></p>
-    <p class="article-description"><%= post.short_description %></p>
+<a href="<%= post.url %>">
+  <div data-id="<%= post.id %>"
+      class="media mix <%= active %> <%= post.category.slug %> <%= tag_slugs.join(' ') %>">
+    <!-- <img class="media-object" alt="miniature-article"
+      src="/static/base/img/blog/article-min-7.png"> -->
+    <div class="media-body">
+      <h4 class="media-heading"><%= post.title %></h4>
+      <p class="article-category"><%= post.category.title %></p>
+      <p class="article-date"><%= post.published_at.split('T')[0] %></p>
+      <p class="article-description"><%= post.short_description %></p>
+    </div>
   </div>
-</div>
+</a>
