Fix blog sidebar

--- a/blog/static/blog/css/sidebar.css
+++ b/blog/static/blog/css/sidebar.css
@@ -1,6 +1,7 @@
 .item-choice {
     height: 40px;
     overflow: hidden;
+    margin-bottom: 10px;
 }
 .row.bottom .col-right .item-choice .filter {
     display: inline-block;
