Fix and unify jquery static paths

--- a/base/templates/base/boilerplate.html
+++ b/base/templates/base/boilerplate.html
@@ -33,7 +33,7 @@
 {% block body %}{% endblock %}
 
 <script src="{% static '3rdparty/underscore/js/underscore.js' %}"></script>
-<script src="{% static '3rdparty/jquery/js/jquery-1.10.2.js' %}"></script>
+<script src="{% static JQUERY_URL %}"></script>
 <script src="{% static '3rdparty/fastclick/js/fastclick.js' %}"></script>
 <script src="{% static '3rdparty/smooth-scroll/js/jquery.smooth-scroll.min.js' %}"></script>
 <script src="{% static '3rdparty/mixitup/js/jquery.mixitup.min.js' %}"></script>
