Set social icons

--- a/base/templates/base/includes/tabbar.html
+++ b/base/templates/base/includes/tabbar.html
@@ -6,13 +6,13 @@
       <li{% if active %} class="active"{% endif %}><a href="/{{ slug }}">{{ name }}</a></li>
     {% endfor %}
     <li class="last">
-      <a href="#">
-        <img class="social" alt="facebook"
-          src="{% static 'base/img/icon/icon-facebook.png' %}">
-      </a>
-      <a href="#">
+      <a href="https://twitter.com/uranusjr" target="_blank">
         <img class="social" alt="twitter"
           src="{% static 'base/img/icon/icon-twitter.png' %}">
+      </a>
+      <a href="https://www.facebook.com/uranusjr" target="_blank">
+        <img class="social" alt="facebook"
+          src="{% static 'base/img/icon/icon-facebook.png' %}">
       </a>
     </li>
   </ul>
