--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -31,19 +31,19 @@
           <hr>
           <!--social networks-->
           <div class="item-social text-center">
-            <a href="#">
-              <img class="social" alt="Facebook"
-                src="{% static 'base/img/icon/icon-facebook.png' %}">
-            </a>
-            <a href="#">
+            <a href="https://twitter.com/uranusjr" target="_blank">
               <img class="social" alt="Twitter"
                 src="{% static 'base/img/icon/icon-twitter.png' %}">
             </a>
-            <a href="#">
-              <img class="social" alt="Google plus"
-                src="{% static 'base/img/icon/icon-google.png' %}">
+            <a href="https://www.facebook.com/uranusjr" target="_blank">
+              <img class="social" alt="Facebook"
+                src="{% static 'base/img/icon/icon-facebook.png' %}">
             </a>
-            <a href="#">
+            <a href="https://github.com/uranusjr" target="_blank">
+              <img class="social" alt="GitHub"
+                src="{% static 'base/img/icon/icon-github.png' %}">
+            </a>
+            <a href="http://www.linkedin.com/profile/view?id=240657995" target="_blank">
               <img class="social" alt="Linkedin"
                 src="{% static 'base/img/icon/icon-linkedin.png' %}">
             </a>
