--- a/works/templates/works/includes/sidebar.html
+++ b/works/templates/works/includes/sidebar.html
@@ -24,7 +24,9 @@
         </a>
       </div>
       <div class="panel-body">
-        <a href="project-example.html"><h4 class="item-title">{{ work.title }}</h4></a>
+        <a href="{{ work.get_absolute_url }}">
+          <h4 class="item-title">{{ work.title }}</h4>
+        </a>
         <p class="item-category">{{ work.category.title }}</p>
         <div class="item-description">
           {{ work.content }}
