--- a/works/templates/works/work.html
+++ b/works/templates/works/work.html
@@ -29,3 +29,8 @@
 {% block sidebar_content %}
 {% work_sidebar %}
 {% endblock %}
+
+{% block extra_js %}
+{{ block.super }}
+<script src="{% static 'works/js/sidebar.js' %}"></script>
+{% endblock %}
