--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -3,6 +3,7 @@
 {% load i18n static base_tags %}
 
 {% block extra_css %}
+{{ block.super }}
 <link href="{% static 'base/css/style.css' %}" rel="stylesheet" media="screen">
 {% endblock %}
 
@@ -60,5 +61,6 @@
 
 
 {% block extra_js %}
-<script src="{% static 'base/js/main.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'base/js/base.js' %}"></script>
 {% endblock %}
