--- a/base/static/base/less/import.less
+++ b/base/static/base/less/import.less
@@ -1,8 +1,7 @@
-// The folder containing your images
-//@img-url : "";
-
-//Typography
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,400italic|Open+Sans+Condensed:300,700|Pacifico);
+// The folder containing your images.
+// Need to step one extra level out because Django Compressor stores things in
+// /static/CACHE/ and our images are in /static/base/
+@img-url: "../../base/img/";
 
 // Prefixer
 @import "prefixer.less";
