--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -7,6 +7,11 @@
 <link href="{% static 'base/css/style.css' %}" rel="stylesheet" media="screen">
 {% endblock %}
 
+{% block extra_header %}
+<link rel="stylesheet" media="screen"
+  href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic|Open+Sans+Condensed:300,700|Pacifico">
+{% endblock %}
+
 
 {% block body %}
 
