--- a/works/templates/works/work.html
+++ b/works/templates/works/work.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% load base_tags work_tags %}
+{% load static base_tags work_tags %}
 
 {% block title %}{{ work.title }}{% endblock %}
 
