Restrucure blog template rendering

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,80 +1,5 @@
-{% extends 'base/base.html' %}
-
-{% load i18n static compress base_tags %}
-
-{% block title %}{{ post.title }}{% endblock %}
-
-{% block extra_css %}
-{{ block.super }}
-{% stylesheets post 0 %}
-<link rel="stylesheet" href="{% static 'blog/css/post.css' %}" media="screen">
-<link rel="stylesheet" href="{% static 'blog/css/sidebar.css' %}" media="screen">
-{% endblock %}
-
+{% extends 'blog/base.html' %}
 
 {% block content_main %}
-
-<h1>{{ post.title }}</h1>
-<h1 class="spacer">___</h1>
-
-<!--article date-->
-<p class="article-date">{{ post.published_at|date }}</p>
-
-<!--article tags-->
-<p class="article-tags">
-  {% with category=post.category %}
-  {% trans 'Category: ' %}
-  <a href="#" class="filter" data-filter="{{ category.slug }}">{{ category.title }}</a>
-  {% endwith %}
-  <br>
-  {% if post.tags.all %}{% trans 'Tags: ' %}{% endif %}
-  {% for tag in post.tags.all %}
-  <a href="#" class="filter" data-filter="{{ tag.slug }}">{{ tag.name }}</a>
-  {% if not forloop.last %} ,{% endif %}
-  {% endfor %}
-</p>
-
-<!--article content-->
-<div class="article-description">
-  {{ post.content }}
-</div>
-
-<!--navigation-->
-{% with previous=post.previous next=post.next %}
-<ul class="pager">
-  <li class="previous{% if not previous %} disabled{% endif %}">
-    <a href="{% if previous %}{{ previous.get_absolute_url }}{% else %}#{% endif %}">
-      &lt; {% trans 'Prev' %}
-    </a>
-  </li>
-  <li class="next{% if not next %} disabled{% endif %}">
-    <a href="{% if next %}{{ next.get_absolute_url }}{% else %}#{% endif %}">
-      {% trans 'Next' %} &gt;
-    </a>
-  </li>
-</ul>
-{% endwith %}
-<hr>
-
-{% endblock %}
-
-{% block sidebar_title %}{% trans 'Blog Posts' %}{% endblock %}
-
-{% block sidebar_content %}
-{% compress js %}
-<script>
-var postListUrl = '{% url "api_dispatch_list" resource_name="blog/post" api_name="v1" %}';
-var currentPostId = '{{ post.id }}';
-</script>
-{% endcompress %}
-<script type="text/template" id="sidebar_cell_template">
-{% include 'blog/includes/sidebar_post_tmpl.html' %}
-</script>
-{% include 'blog/includes/sidebar.html' %}
-{% endblock %}
-
-{% block extra_js %}
-{{ block.super }}
-{% javascripts post 1 %}
-<script src="{% static 'blog/js/sidebar.js' %}"></script>
+{% include 'blog/includes/post_content.html' %}
 {% endblock %}
