--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -36,7 +36,7 @@
       {% block content %}
 
       <div>
-        <section>
+        <section id="content_main">
           {% block content_main %}{% endblock %}
         </section>
       </div>
