--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'pages/page.html' %}
 
-{% load i18n static pages_tags %}
+{% load i18n static %}
 
 {% block extra_css %}
 {{ block.super }}
@@ -14,9 +14,4 @@
   <strong>Uranus</strong>, taken in 1986 during the NASA/JPL/<em>Voyager 2</em> mission.
   {% endblocktrans %}
 </div>
-{% endblock %}
-
-
-{% block sidebar_content %}
-{% sidebar page %}
 {% endblock %}
