--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,400italic|Open+Sans+Condensed:300,700|Pacifico);
 body {
   font-family: 'Lato', sans-serif;
 }
@@ -72,7 +71,7 @@ textarea:focus {
   display: none;
 }
 a.scroll-top {
-  background: #fff;
+  background: #ffffff;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
@@ -85,7 +84,7 @@ a.scroll-top {
 a.scroll-top img {
   width: 60px;
 }
-.load-more+.scroll-top {
+.load-more + .scroll-top {
   margin-top: 0;
 }
 html,
@@ -419,7 +418,7 @@ body,
   margin: 0;
 }
 .row.bottom .col-right section .media:hover {
-  background: #fff;
+  background: #ffffff;
 }
 .row.bottom .col-right section .media-body h4 {
   font-size: 24px;
@@ -478,9 +477,9 @@ body,
 }
 .panel.item {
   border: none;
-  -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .panel.item a {
   color: #333333;
@@ -498,7 +497,7 @@ body,
   background: #cccccc;
 }
 .panel.item .panel-body {
-  background: #fff;
+  background: #ffffff;
   padding: 0 10px;
 }
 .panel.item .item-img {
@@ -541,7 +540,7 @@ body,
     display: block;
     height: 16px;
     width: 100%;
-    background: url("../img/gradient.png");
+    background: url("../../base/img/gradient.png");
     position: fixed;
     z-index: 2;
   }
