--- a/works/templates/works/work.html
+++ b/works/templates/works/work.html
@@ -23,7 +23,7 @@
 
     <!--activity descritpion-->
     <p class="work">{{ work.short_description }}</p>
-    {{ work.content }}
+    <div class="text-justify">{{ work.content }}</div>
 
   </div>
 </div>
