--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -2,23 +2,29 @@
 // -----------------------
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 16px;
 }
 .heading {
     font-family: 'Open Sans Condensed', sans-serif;
 }
-h1,h2,h3,h4, ul.pager {
+h1, h2, h3, h4, ul.pager {
     .heading;
     text-transform:uppercase;
     font-weight:700 !important;
 }
-.spacer{
+blockquote p {
+    font-size: 16px;
+}
+.spacer {
     margin: 0;
     font-size: 60px;
     top: -35px;
     line-height: 20px;
     position: relative;
 }
-
+.text-justify {
+    text-align: justify;
+}
 
 // ICON
 // -----------------------
@@ -134,7 +140,7 @@ html,body,.container {
 
 .row{
     margin:0;
-    
+
     // TOP BAR - Name and Menu
     &.top{
         position:static;
@@ -142,11 +148,11 @@ html,body,.container {
             position:fixed;
             width:100%;
         }
-        
+
         // TOP LEFT - Name or Brand
         .col-left{
             .name {
-                font-family: 'Pacifico', cursive; 
+                font-family: 'Pacifico', cursive;
                 font-size:1.5em;
                 padding: 10px 30px;
                 margin-bottom:0;
@@ -157,7 +163,7 @@ html,body,.container {
                 }
             }
         }
-        
+
         // TOP RIGHT - Menu
         .col-right{
             nav{
@@ -178,8 +184,8 @@ html,body,.container {
                             display:inline;
                             border:none;
                             &:hover {
-                                background:#fff;     
-                            } 
+                                background:#fff;
+                            }
                         }
                         &.active{
                             background:@grey-1;
@@ -197,19 +203,19 @@ html,body,.container {
                             padding:10px 0;
                             @media (min-width: 768px) and (max-width: 992px){
                             padding:14px 0;
-                            }    
+                            }
                             font-size:16px;
                             @media (min-width: 992px){
                                 font-size:21px;
-                            }  
+                            }
                             @media (min-width: 468px) and (max-width: 768px){
                                 font-size:21px;
-                            }    
+                            }
                             &:hover {
                                 color:@grey-6;
                                 text-decoration:none;
-                                background:@grey-2;     
-                            }    
+                                background:@grey-2;
+                            }
                         }
                     }
                 }
@@ -226,12 +232,12 @@ html,body,.container {
                 }
                 @media (min-width: 468px) and (max-width: 768px){
                     width:32px;
-                    height:32px;  
+                    height:32px;
                 }
             }
         }
     }
-    
+
     // BOTTOM - Content and sidebar
     &.bottom{
         padding-top:0;
@@ -239,10 +245,10 @@ html,body,.container {
             padding-top:50px;
         }
         height:100%;
-        
+
         // BOTTOM LEFT - CONTENT
         .col-left{
-            
+
             //Pagination
             ul.pager{
                 li{
@@ -267,7 +273,7 @@ html,body,.container {
                     }
                 }
             }
-            
+
             //Share
             .share {
                 margin:0;
@@ -275,8 +281,8 @@ html,body,.container {
             .social {
                 width:30px;
             }
-            
-            
+
+
             hr.sm {
                 margin-top:10px;
                 margin-bottom:10px;
@@ -287,7 +293,8 @@ html,body,.container {
             .work {
                     font-size:24px;
                     font-style:italic;
-                    color:@grey-4;    
+                    color:@grey-4;
+                    text-align: center;
                 }
             section{
                 padding: 30px 20px;
@@ -297,7 +304,7 @@ html,body,.container {
                 @media (min-width: 992px) and (max-width:1200px){
                     padding: 30px 40px;
                 }
-                
+
                 //Customise article
                 .article-date{
                     color:@grey-3;
@@ -312,9 +319,9 @@ html,body,.container {
                             color:@grey-5;
                             text-decoration:none;
                         }
-                    }    
+                    }
                 }
-                
+
                 //customise comment
                 .comment-date {
                     color:@grey-3;
@@ -325,9 +332,9 @@ html,body,.container {
                 .media-heading {
                     margin:0;
                 }
-            }    
+            }
         }
-        
+
         // BOTTOM RIGHT - SIDEBAR
         .col-right{
             background-color:@grey-1;
@@ -335,7 +342,7 @@ html,body,.container {
             @media (min-width : 768px){
                     border:none;
             }
-            
+
             //SUBMENU - Selection of category
             .item-choice {
                 padding:10px 10px 0 10px;
@@ -367,11 +374,11 @@ html,body,.container {
                     border-color:@grey-2;
                 }
             }
-            
+
             .spacer{
                 margin-bottom:40px;
             }
-            
+
             //Load more button
             .load-more{
                 padding:20px 0;
@@ -384,7 +391,7 @@ html,body,.container {
                     background:@grey-1;
                 }
             }
-            
+
             //Icon social for CONTACT
             .social {
                 margin-right:10px;
@@ -395,7 +402,7 @@ html,body,.container {
                     height:48px;
                 }
             }
-            
+
             //Article list for BLOG
             .list-group{
                 padding-bottom:25px;
@@ -464,24 +471,24 @@ html,body,.container {
                 .media-heading {
                     margin:0;
                 }
-            } 
+            }
         }
         > div{
             @media (min-width: 768px) and (max-width:992px){
                 height:100%;
-                overflow:auto;  
+                overflow:auto;
                 -webkit-overflow-scrolling: touch;
             }
             @media (min-width:992px){
                 height:100%;
-                overflow:auto;  
+                overflow:auto;
             }
         }
     }
-    // REMOVE padding to col-lg, ... 
+    // REMOVE padding to col-lg, ...
     &.top > div, &.bottom > div{
         padding:0;
-    }    
+    }
 }
 
 
@@ -494,7 +501,7 @@ html,body,.container {
             .btn{
                 border-radius:0;
             }
-        }   
+        }
     }
     //Panel for CONTACT
     &.contact{
@@ -505,7 +512,7 @@ html,body,.container {
         &.panel-default {
             border:none;
         }
-        
+
     }
     //Panel for WORK
     &.item{
@@ -525,7 +532,7 @@ html,body,.container {
         .panel-heading {
             padding:0;
             background:@grey-3;
-        } 
+        }
         .panel-body {
             background:@white;
             padding:0 10px;
@@ -551,7 +558,7 @@ html,body,.container {
             margin-bottom:5px;
         }
         .item-description{
-            
+
         }
         .item-mail{
             font-size:24px;
@@ -566,7 +573,7 @@ html,body,.container {
                     color:@grey-5;
                     text-decoration:none;
                 }
-            }    
+            }
         }
         .item-social{
             margin-bottom:10px;
@@ -597,7 +604,7 @@ html,body,.container {
             position:relative;
             z-index:4;
         }
-    
+
     }
 }
-    
+
