--- a/pages/templates/pages/page.html
+++ b/pages/templates/pages/page.html
@@ -26,7 +26,7 @@
     {% endblock %}
 
     {% block content_detail %}
-    {{ page.content }}
+    <div class="text-justify">{{ page.content }}</div>
     {% endblock %}
 
   </div>
