--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -17,6 +17,16 @@
 {% if LESS_DEBUG %}
 <script src="{% static '3rdparty/less/js/less-1.5.1.min.js' %}"></script>
 {% endif %}
+{% if not debug %}
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-5684347-4', 'uranusjr.com');
+ga('send', 'pageview');
+</script>
+{% endif %}
 {% endblock %}
 
 
