--- a/base/static/base/less/site.less
+++ b/base/static/base/less/site.less
@@ -12,6 +12,9 @@ h1, h2, h3, h4, ul.pager {
     text-transform:uppercase;
     font-weight:700 !important;
 }
+p {
+    margin: 0 0 1em;
+}
 blockquote p {
     font-size: 16px;
 }
