Tweak sidebar styling
Fix #9

--- a/blog/templates/blog/includes/sidebar.html
+++ b/blog/templates/blog/includes/sidebar.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block sidebar_items %}
-<section id="Grid">
+<section id="Grid" class="sidebar-grid">
   <a href="#" class="btn btn-default btn-lg btn-block load-more"
       data-action="after" data-method="prepend" data-anchor="0" data-direction="">
     {% trans 'Load more' %}
