--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
 
 {% block extra_css %}
 {{ block.super }}
-{% stylesheets post 0 %}
+{% stylesheets header post %}
 <link rel="stylesheet" href="{% static 'blog/css/post.css' %}" media="screen">
 <link rel="stylesheet" href="{% static 'blog/css/sidebar.css' %}" media="screen">
 {% endblock %}
@@ -36,6 +36,6 @@ var currentPostId = '{{ post.id }}';
 
 {% block extra_js %}
 {{ block.super }}
-{% javascripts post 1 %}
+{% javascripts footer post %}
 <script src="{% static 'blog/js/sidebar.js' %}"></script>
 {% endblock %}
