--- a/works/templates/works/work.html
+++ b/works/templates/works/work.html
@@ -6,7 +6,7 @@
 
 {% block extra_css %}
 {{ block.super }}
-{% stylesheets page 0 %}
+{% stylesheets header work %}
 {% endblock %}
 
 {% block content_main %}
@@ -36,6 +36,6 @@
 
 {% block extra_js %}
 {{ block.super }}
-{% javascripts page 1 %}
+{% javascripts footer work %}
 <script src="{% static 'works/js/sidebar.js' %}"></script>
 {% endblock %}
