Sidebar should contain description, not content

--- a/works/templates/works/includes/sidebar.html
+++ b/works/templates/works/includes/sidebar.html
@@ -29,7 +29,7 @@
         </a>
         <p class="item-category">{{ work.category.title }}</p>
         <div class="item-description">
-          {{ work.content }}
+          {{ work.short_description }}
         </div>
         <hr>
         <p class="item-tags">
